# tauri-app

./: .gitignore  README.md  RESUME.md  index.html  package.json  pnpm-lock.yaml
proto/: auth.proto  common.proto  todo.proto
src/: App.tsx  client.ts  index.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: db.rs  grpc.rs  lib.rs
src-tauri/src/services/: auth.rs  todo.rs
src-tauri/src/utils/: helpers.rs
src/proto/: auth.client.ts  auth.ts  common.ts  todo.client.ts  todo.ts
