[package]
name = "tauri-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "grpc-server"
path = "src/bin/grpc_server.rs"

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }
tonic-prost-build = "0.14.6"

[dependencies]
tauri = { version = "2.11.3", features = [] }
tauri-plugin-opener = "2.5.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tonic = "0.14.6"
tonic-prost = "0.14.6"
prost = "0.14.4"
tokio = { version = "1.52.3", features = ["full"] }
tonic-web = "0.14.6"
tower-http = { version = "0.6.11", features = ["cors"] }
sqlx = { version = "0.8.6", features = [
    "postgres",
    "runtime-tokio-native-tls",
    "migrate",
    "uuid"
] }
argon2 = "0.6.0-rc.8"
jsonwebtoken = "10.4.0"
chrono = "0.4.45"
dotenvy = { version = "0.15.7", features = ["cli"] }
